# stormgrill

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: protocol.md  roadmap.md
src/stormgrill/: __init__.py  cli.py
src/stormgrill/core/: hourglass.py  orchestrator.py
src/stormgrill/fusion/: report.py
src/stormgrill/grill/: engine.py  fatigue.py
src/stormgrill/monitoring/: audit.py
src/stormgrill/storm/: agents.py  cache.py  cli.py  models.py  pipeline.py  verification.py  verifier.py
templates/: report.html.j2
tests/: test_package.py  test_storm.py
